--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,11 @@ sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenLocal()
+    mavenCentral()
 }
 
 dependencies {
+    compileOnly 'org.jetbrains:annotations:19.0.0'
     compileOnly 'org.spigotmc:spigot:1.16.1-R0.1-SNAPSHOT'
     testCompileOnly 'org.spigotmc:spigot:1.16.1-R0.1-SNAPSHOT'
 }
